--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="card-body">
                   <h5 class="card-title">¿El porque de la pag?</h5>
                   <p class="card-text">Cree esta pag para hablar sobre una de mis sagas favoritas trate de hacer lo mejor con pag espero que algun dato te sirva no se para que pero esta ahi ajjajaj muchas gracias por visitar mi pag si pudieras darme unos puntos te lo agradeceria de corazon bien ya va siendo hora de comer.Si necesitas alguna copia usada de este juego contactame puedes encontarme con diferentes nombre te dejo abajo unos links</p>
-                  <a href="#" class="btn btn-primary">Volvamos</a>
+                  <a href="https://perrote12.github.io/Star/" class="btn btn-primary">Volvamos</a>
                 </div>
               </div>
             </div>
